[package]
name = "wutong"
version = "0.2.0"
edition = "2021"
authors = ["Gavin Zheng<gav.zheng@outlook.com"]
description = "A Swiss Army Knife for Developers.🌳"
keywords = ["wutong", "cli", "developer"]
homepage = "https://github.com/WutongDev/wutong"
documentation = "https://github.com/GavZheng/wutong/blob/main/README.md"
repository = "https://github.com/WutongDev/wutong"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "4.5.34"
colored = "3.0.0"
digest = "0.10.7"
md5 = "0.7.0"
pbr = "1.1.1"

[dev-dependencies]
tempfile = "3.19.1"
